--- a/hospital/src/main/resources/messages.properties
+++ b/hospital/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ newPrescription = New prescription
 name = Name
 opened = Opened
 password=Password
+patientsInHospital=Patients in hospital
 patientInfo=Patient info
 patientRegistration = Register new patient
 perform = Perform
